Add comprehensive test suite and fix empty message handling
- Add test suite with 12 tests covering server connection, tool listing, echo functionality, and error handling
- Fix empty message handling to allow empty strings (previously threw error)
- Add test scripts to package.json
- Update tsconfig.json to exclude test files from build
- Add .gitignore file

--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsx src/index.ts"
+    "dev": "tsx src/index.ts",
+    "test": "npm run build && tsx test/index.test.ts",
+    "test:watch": "tsx watch test/index.test.ts"
   },
-  "keywords": ["mcp", "echo", "tool", "model-context-protocol"],
+  "keywords": [
+    "mcp",
+    "echo",
+    "tool",
+    "model-context-protocol"
+  ],
   "author": "tylarcam",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0"
+    "@modelcontextprotocol/sdk": "^1.26.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "typescript": "^5.0.0",
-    "tsx": "^4.0.0"
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0"
   }
 }
